# n-body-sim

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json
include/: cluster.h  cluster.inl  decorators.hpp  particle.h  particle.hpp  precision.hpp  seed.h  stdafx.h  types.h  types.hpp
include/clustering/: buffers.hpp  buffers.inl  cluster.hpp  clustering.hpp  k_means.hpp  k_means.inl  kpp.hpp  kpp.inl  nearest_centroid.hpp  nearest_centroid.inl  options.hpp
include/forces/: gravity.hpp
include/statistics/: average_cluster_distance.hpp  average_cluster_distance_inl
tests/: 2D_clustering_viewer.hpp  main.cpp  my_particles.hpp
tests/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h
tests/data/: a1.hpp
